--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,177 @@
-# torch>=1.7.0
-# torchvision>=0.6.0
-# cython
-# scipy
-# xmltodict
-#tqdm
-#transformers==4.5.1
-# onnx
-# onnxruntime
-# prettytable
-# submitit
-git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI&egg=pycocotools
-#git+https://github.com/cocodataset/panopticapi.git#egg=panopticapi
-#timm
+absl-py==1.0.0
+antlr4-python3-runtime==4.8
+anyio==3.5.0
+appdirs==1.4.4
+argon2-cffi==20.1.0
+asttokens==2.0.5
+attrs==21.4.0
+Babel==2.9.1
+backcall==0.2.0
+beautifulsoup4==4.10.0
+black==21.4b2
+bleach==4.1.0
+brotlipy==0.7.0
+cachetools==5.0.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.0.3
+#clip==1.0
+cloudpickle==2.0.0
+cPython==0.0.4
+cryptography==36.0.0
+cycler==0.11.0
+Cython==0.29.27
+debugpy==1.5.1
+decorator==5.1.1
+defusedxml==0.7.1
+#detectron2==0.6
+easydict==1.9
+entrypoints==0.4
+executing==0.8.3
+fastjsonschema==2.15.1
+filelock==3.5.0
+flatbuffers==2.0
+fonttools==4.29.1
+ftfy==6.1.1
+future==0.18.2
+fvcore==0.1.5.post20220305
+google-auth==2.6.2
+google-auth-oauthlib==0.4.6
+grpcio==1.45.0
+hydra-core==1.1.1
+idna==3.3
+imageio==2.16.1
+imageio-ffmpeg==0.4.3
+importlib-metadata==4.11.3
+importlib-resources==5.6.0
+iopath==0.1.9
+ipykernel==6.9.1
+ipython==8.2.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.0
+json5==0.9.5
+jsonschema==4.4.0
+jupyter==1.0.0
+jupyter-client==7.1.2
+jupyter-console==6.4.3
+jupyter-core==4.9.2
+jupyter-server==1.16.0
+jupyterlab==3.3.4
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.13.0
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.2
+Markdown==3.3.6
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+mkl-fft==1.3.1
+mkl-random==1.2.2
+mkl-service==2.4.0
+mypy-extensions==0.4.3
+nbclassic==0.3.7
+nbclient==0.5.13
+nbconvert==6.4.4
+nbformat==5.3.0
+nest-asyncio==1.5.5
+networkx==2.7.1
+ninja==1.10.2.3
+notebook==6.4.8
+notebook-shim==0.1.0
+numpy==1.22.3
+oauthlib==3.2.0
+olefile==0.46
+omegaconf==2.1.1
+onnx==1.10.2
+onnxruntime==1.10.0
+opencv-python==4.5.5.62
+packaging==21.3
+pandas==1.4.1
+pandocfilters==1.5.0
+#panopticapi==0.1
+parso==0.8.3
+pathspec==0.9.0
+pexpect==4.8.0
+pickle5==0.0.11
+pickleshare==0.7.5
+Pillow==8.4.0
+pip==21.2.4
+platformdirs==2.5.0
+portalocker==2.4.0
+prettytable==3.1.0
+prometheus-client==0.13.1
+prompt-toolkit==3.0.28
+protobuf==3.19.4
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycocotools==2.0.4
+pycparser==2.21
+pydot==1.4.2
+Pygments==2.11.2
+pymongo==4.0.1
+pyOpenSSL==22.0.0
+pyparsing==3.0.7
+pyrsistent==0.18.0
+PySocks==1.7.1
+pyspng==0.1.0
+python-dateutil==2.8.2
+pytz==2022.1
+PyWavelets==1.3.0
+PyYAML==6.0
+pyzmq==22.3.0
+qtconsole==5.3.0
+QtPy==2.0.1
+regex==2022.1.18
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
+sacremoses==0.0.47
+scikit-image==0.19.2
+scikit-learn==1.0.2
+scipy==1.8.0
+Send2Trash==1.8.0
+setuptools==58.0.4
+#sip==4.19.13
+six==1.16.0
+sniffio==1.2.0
+soupsieve==2.3.1
+stack-data==0.2.0
+tabulate==0.8.9
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+termcolor==1.1.0
+terminado==0.13.1
+testpath==0.5.0
+threadpoolctl==3.1.0
+tifffile==2022.3.25
+timm==0.5.4
+tokenizers==0.10.3
+toml==0.10.2
+tomli==2.0.1
+torch==1.11.0
+torchaudio==0.11.0
+torchvision==0.12.0
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.1.1
+transformers==4.5.1
+typing-extensions==3.10.0.2
+urllib3==1.26.8
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.3.2
+Werkzeug==2.1.0
+wheel==0.37.1
+widgetsnbextension==3.5.2
+xmltodict==0.12.0
+yacs==0.1.8
+zipp==3.7.0
